# VAST

./: pyproject.toml
libvast/model/: general_module.py  vast.py
libvast/utils/: build_dataloader.py  tool.py
notebooks/: videoretrieval.ipynb
