[tool.poetry]
name = "libvast"
version = "0.1.0"
description = "Convenience library API for VAST"
authors = ["Dietmar Schabus <dschabus@veritone.com>",
           "Markus Toman <mtoman@veritone.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torchvision = "^0.17.1"
torchaudio = "^2.0.2"
numpy = "^1.26.4"
easydict = "^1.13"
einops = "^0.7.0"
tqdm = "^4.66.1"
regex = "^2023.12.25"
transformers = "^4.31.0"
toolz = "^0.12.1"
decord = "^0.6.0"
h5py = "^3.10.0"
webdataset = "^0.2.86"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"

[build-system]
requires = ["poetry-core"]